--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.7.1",
+    "axios": "^1.6.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
