--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@smastrom/react-rating": "^1.3.2",
+    "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.7.1",
     "axios": "^1.6.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
+    "mui-datatables": "^4.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
