--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.0",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
+    "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "mui-datatables": "^4.3.0",
     "prop-types": "^15.8.1",
